[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "cinda-package-tyner"
description = "This is a sample Pet Store Server based on the OpenAPI 3.0 specification.  You can find out more about Swagger at [https://swagger.io](https://swagger.io). In the third iteration of the pet store, we've switched to the design first approach! You can now help us improve the API whether it's by making changes to the definition itself or to the code. That way, with time, we can improve the API in general, and expose some of the new features in OAS3.  Some useful links: - [The Pet Store repository](https://github.com/swagger-api/swagger-petstore) - [The source API definition for the Pet Store](https://github.com/swagger-api/swagger-petstore/blob/master/src/main/resources/openapi.yaml)"
version = "1.0.6"
readme = "README.md"
keywords = []
dependencies = ["apimatic-core~=0.2.0, >= 0.2.24", "apimatic-core-interfaces~=0.1.0, >= 0.1.8", "apimatic-requests-client-adapter~=0.1.0, >= 0.1.10", "python-dotenv>=0.21, <2.0"]
classifiers = []
requires-python = ">=3.7"
[[project.authors]]
name = "Acmetest"
email = "support@apimatic.com"

[project.urls]
hi = "https://mailinator.com"
test = "https://mailinatord.com"
[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
[tool]
[tool.setuptools]
[tool.setuptools.packages]
[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
